# ibapi4gu

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/: CMakeLists.txt
apps/gw_scanner/: CMakeLists.txt  main.cpp
cmake/: Deps.cmake  ProjectOptions.cmake  ProjectWarnings.cmake
cmake/toolchains/: toolchain-linux.cmake  toolchain-msvc.cmake
